--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
             <button id="play-button" class="control-btn" disabled>PLAY</button>
         </div>
         <div class="slider-container">
-            <label for="click-slider">Select Number of Clicks (1-5):</label>
-            <input type="range" id="click-slider" min="1" max="5" value="1">
-        </div>
-        <div class="tile-grid" id="tile-grid"></div>
+    <label for="click-slider">Select Number of Clicks (1-5):</label>
+    <input type="range" id="click-slider" min="1" max="5" value="1">
+    <span id="click-count">1</span> <!-- This span will display the current slider value -->
+</div>  
+    <div class="tile-grid" id="tile-grid"></div>
     </div>
     
     <script src="script.js"></script>
